Fix footer on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,22 @@
 
 /* ---------------------------------------------------General spacing/text */
 
+html,
+body {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+#page-content {
+    flex: 1 0 auto;
+}
+
 /* ---------------------------------Text */
 
 .font-londrina-shadow {
@@ -87,26 +103,10 @@
 
 /* ---------------------------------------------------Footer */
 
-html,
-body {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-#page-content {
-    flex: 1 0 auto;
-}
-
 #footer {
     flex-shrink: 0;
     background-color: #063367;
-    height: 5rem;
+    /* height: 5rem; */
 }
 
 /* ---------------------------------Copyright */
@@ -114,15 +114,12 @@ body {
 #copyright {
     color: #fff;
     font-size: 0.625rem;
-    height: 0.3125rem;
-}
-
-.copyright-text {
     line-height: 5rem;
 }
 
 #copyright p {
     margin: 0;
+    
 }
 
 /* ---------------------------------Footer Socials */
@@ -344,6 +341,10 @@ body {
 
     #legend {
         margin: 0.3125rem;
+    }
+
+    #copyright {
+        font-size: 8px;
     }
 
     #footer-socials {
